# lm

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: release-github.yml  release-rust.yml
crates/dkdc-ai-cli/: Cargo.toml
crates/dkdc-ai-cli/src/: main.rs
crates/dkdc-ai-core/: Cargo.toml
crates/dkdc-ai-core/src/: lib.rs
crates/dkdc-ai-py/: Cargo.toml
crates/dkdc-ai-py/src/: lib.rs
crates/dkdc-lm-cli/: Cargo.toml
crates/dkdc-lm-cli/src/: main.rs
crates/dkdc-lm-core/: Cargo.toml
crates/dkdc-lm-core/src/: lib.rs
crates/dkdc-lm-py/: Cargo.toml
crates/dkdc-lm-py/src/: lib.rs
py/dkdc_ai/: __init__.py  core.pyi
py/dkdc_lm/: __init__.py  core.pyi
tests/: test_lm.py
