[project]
name = "dkdc-lm"
version = "0.2.1"
description = "Local LLM inference management via llama-server"
authors = [{ name = "Cody", email = "cody@dkdc.io" }]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
dependencies = []

[dependency-groups]
dev = ["maturin>=1.0,<2.0", "ruff>=0.9", "ty>=0.0.19", "pytest>=8"]

[tool.maturin]
module-name = "dkdc_lm.core"
python-packages = ["dkdc_lm"]
python-source = "py"
manifest-path = "crates/dkdc-lm-py/Cargo.toml"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "crates/dkdc-lm-core/**/*.rs" },
    { file = "crates/dkdc-lm-py/**/*.rs" },
    { file = "py/dkdc_lm/**/*.py" },
]
