[package]
name = "dkdc-ai-cli"
version = "0.1.0"
edition = "2024"
authors = ["Cody <cody@dkdc.io>"]
description = "CLI for dkdc-ai: local LLM inference management"
repository = "https://github.com/dkdc-io/ai"
license = "MIT"

[[bin]]
name = "ai"
path = "src/main.rs"

[dependencies]
dkdc-ai = { version = "0.1", path = "../dkdc-ai-core" }
clap = { version = "4", features = ["derive"] }
