[package]
name = "dkdc-ai"
version = "0.1.0"
edition = "2024"
authors = ["Cody <cody@dkdc.dev>"]
description = "Local LLM inference management via llama-server"
repository = "https://github.com/lostmygithubaccount/dkdc-ai"
license = "MIT"
readme = "README.md"

[lib]
name = "dkdc_ai"
path = "src/lib.rs"

[dependencies]
dkdc-sh = { git = "https://github.com/dkdc-io/dkdc-sh.git" }
reqwest = { version = "0.12", features = ["blocking"] }
