[package]
name = "dkdc-ai"
version = "0.1.0"
edition = "2024"
authors = ["Cody <cody@dkdc.io>"]
description = "Local LLM inference management via llama-server"
repository = "https://github.com/dkdc-io/ai"
license = "MIT"
readme = "../../README.md"

[lib]
name = "dkdc_ai"
path = "src/lib.rs"

[dependencies]
dkdc-sh = "0.1"
reqwest = { version = "0.12", features = ["blocking"] }
