[workspace]

[package]
name = "dkdc-ai-py"
version = "0.1.0"
edition = "2024"
authors = ["Cody <cody@dkdc.io>"]
license = "MIT"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
dkdc-ai = { path = "../dkdc-ai-core" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
