[workspace]

[package]
name = "dkdc-lm-py"
version = "0.1.0"
edition = "2024"
authors = ["Cody <cody@dkdc.io>"]
license = "MIT"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
dkdc-lm = { path = "../dkdc-lm-core" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
